--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body{
-    background-color: yellow;
+    background-color: rgb(251, 227, 8);
     color: rgb(36, 24, 85);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     max-width: 1200px;
@@ -18,4 +18,9 @@ main{
     display: flex;
     flex-direction: row;
     margin-top: 50px;
+}
+
+li{
+    display: inline-block;
+    margin: 20px;
 }
