--- a/styles.css
+++ b/styles.css
@@ -60,3 +60,12 @@ form{
     flex-direction: column;
     width: 100%;
 }
+
+input{
+    margin-top: 20px;
+    height: 20px;
+    padding: 15px;
+    border-radius: 20px;
+    border: none;
+    font-size: 15px;
+}
